Fixed statistics handler for monthly stats
