# admin/backend/docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /
 definitions:
   handlers.MonthlyStat:
     properties:
@@ -305,17 +304,9 @@ definitions:
         example: 12345
         type: integer
     type: object
-host: api.говно.site
 info:
-  contact:
-    email: support@swagger.io
-    name: API Support
-    url: http://www.swagger.io/support
+  contact: {}
   description: API for Gym Genius application
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
   title: Gym Genius API
   version: "1.0"
 paths:
@@ -612,6 +603,39 @@ paths:
       summary: Record user activity
       tags:
       - statistics
+  /statistics/user/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve monthly activity statistics for a user
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Monthly activity statistics
+          schema:
+            items:
+              $ref: '#/definitions/handlers.MonthlyStat'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get user activity statistics
+      tags:
+      - statistics
   /users:
     get:
       consumes:
@@ -811,39 +835,6 @@ paths:
       summary: Update an existing user by ID
       tags:
       - users
-  /users/{id}/activity:
-    get:
-      consumes:
-      - application/json
-      description: Retrieve monthly activity statistics for a user
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Monthly activity statistics
-          schema:
-            items:
-              $ref: '#/definitions/handlers.MonthlyStat'
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.ErrorResponse'
-      security:
-      - BearerAuth: []
-      summary: Get user activity statistics
-      tags:
-      - statistics
   /users/count:
     get:
       consumes:
